# interview-questions

./: .gitignore  README.md  hello.py  pyproject.toml  requirements.txt
notebooks/: playground.ipynb
results/: 2024-12-16T19:05:24.734251.csv  2024-12-16T19:05:24.734251.json  2024-12-16T19:30:31.000936.csv  2024-12-16T19:30:31.000936.json  2024-12-16T19:48:04.440547.csv  2024-12-16T19:48:04.440547.json  2024-12-16T19:57:06.649144.csv  2024-12-16T19:57:06.649144.json  2024-12-16T20:20:36.838731.csv  2024-12-16T20:20:36.838731.json  2024-12-16T20:43:33.878019.csv  2024-12-16T20:43:33.878019.json  amazon_web_services_2024-12-14T18:57:46.216520.csv  amazon_web_services_2024-12-14T18:57:46.216520.json  case_study_machine_learning_engineering_2024-12-14T20:33:49.166615.csv  case_study_machine_learning_engineering_2024-12-14T20:33:49.166615.json  data_eng_gpt4omini_2024-12-14T17:20:21.715993.csv  data_eng_gpt4omini_2024-12-14T17:20:21.715993.json  data_science_2024-12-15T11:19:29.651503.csv  data_science_2024-12-15T11:19:29.651503.json  data_science_2024-12-15T18:43:30.309159.csv  data_science_2024-12-15T18:43:30.309159.json  data_science_2024-12-15T18:57:28.923287.csv  data_science_2024-12-15T18:57:28.923287.json  data_science_2024-12-15T19:06:17.713496.csv  data_science_2024-12-15T19:06:17.713496.json  data_science_2024-12-15T19:09:14.069577.csv  data_science_2024-12-15T19:09:14.069577.json  mle_gpt4o_2024-12-14T16:21:52.545992.csv  mle_gpt4o_2024-12-14T16:21:52.545992.json  mlops_gpt4omini_2024-12-14T17:17:35.613464.csv  mlops_gpt4omini_2024-12-14T17:17:35.613464.json
(+16 files in other folders)
